@@ -4,6 +4,7 @@ package com.portfolio.thecitychoir.service;
 import com.portfolio.thecitychoir.entity.ProfileEntity;
 import com.portfolio.thecitychoir.repository.ProfileRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -11,6 +12,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -18,11 +20,21 @@ public class AppUserDetailsService implements UserDetailsService {
     private final ProfileRepository profileRepository;
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        ProfileEntity profileEntity = profileRepository.findByEmail(email).orElseThrow(() -> new UsernameNotFoundException("Profile Not Found with email: " + email));
-        return User.builder()
+        ProfileEntity profileEntity = profileRepository.findByEmail(email)
+                .orElseThrow(() -> new UsernameNotFoundException("Profile Not Found with email: " + email));
+
+        return org.springframework.security.core.userdetails.User.builder()
                 .username(profileEntity.getEmail())
-                .password(profileEntity.getPassword())
-                .authorities(Collections.emptyList())
+                .password(profileEntity.getPassword()) // MUST be encoded
+                .authorities(
+                        List.of(new SimpleGrantedAuthority("ROLE_" + profileEntity.getRole().name()))
+                )
+                .accountExpired(false)
+                .accountLocked(false)
+                .credentialsExpired(false)
+                .disabled(!profileEntity.getIsActive()) // respect profile activation
                 .build();
     }
+
+
 }
